--- a/styles/main.css
+++ b/styles/main.css
@@ -53,3 +53,20 @@
         .menu a:hover{
             background-color: #3338;
         }
+/*Medium Devices - Tablets */
+    @media screen and (min-width:768px){
+        nav .btn{
+            display: none;
+        }
+        .menu{
+            display: flex;
+            width: auto;
+            max-height: 600px;
+        }
+    }
+/*Extra Large Devices - Desktop*/    
+    @media screen and (min-width:1200px){
+        nav{
+            justify-content: space-around;
+        }
+    }
