--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,30 @@
             text-shadow: 0 0 2vw #eee;
             font-size: min(calc(2vw + .8rem), 3rem);
         }
+    /* Pie de pagina */
+        #footer{
+            padding: 1rem;
+            background: linear-gradient(#63aA, #66cA);
+        }
+        .social{
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .social a{
+            position: relative;
+            margin: .25rem;
+            border-radius: .25rem;
+            padding: .25rem .5rem;
+            color:#eee;
+            background-color: #333;
+            text-decoration: none;
+        }
+        .social a:hover{
+            bottom: .25rem;
+            background-color: #666;
+            box-shadow: 0 0 .5rem #333;
+        }
 /*Medium Devices - Tablets */
     @media screen and (min-width:768px){
         nav .btn{
