--- a/styles/main.css
+++ b/styles/main.css
@@ -70,9 +70,41 @@
         }
     /* Pie de pagina */
         #footer{
+            position: relative;
             padding: 1rem;
             background: linear-gradient(#63aA, #66cA);
         }
+        .map iframe{
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
+        .map .btn{
+            position: absolute;
+            top: .5rem;
+            right: .5rem;
+            min-width: 2rem;
+            font-size: 1.5rem;
+            color: #eee;
+            background-color: #333;
+        }
+        .icon-min::before{
+            content: ' - '
+        }
+        .icon-max::before{
+            content: ' + ';
+        }
+        .map iframe.active,
+        .btn.icon-min{
+            position: fixed;
+            z-index: 2;
+            opacity: .9;
+        }
+    /*Repositorios*/
         .social{
             display: flex;
             justify-content: center;
